No source change upload against GCC 12.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+freeimage (3.18.0+ds2-10deepin0) unstable; urgency=medium
+
+  * No source change upload against GCC 12.
+
+ -- Tianyu Chen <sweetyfish@deepin.org>  Thu, 19 Sep 2024 22:47:28 +0800
+
 freeimage (3.18.0+ds2-10) unstable; urgency=medium
 
   * Team upload
